Fixed navbar height being too short on mobile

--- a/src/styles/navbar.sass
+++ b/src/styles/navbar.sass
@@ -85,7 +85,7 @@
         margin-right: 0.5rem
 
 .show-nav
-    height: 170px
+    height: 240px
 
 @media screen and ( min-width: 768px )
     .nav-btn
